--- a/ASA/src/main/java/LogIn.fxml
+++ b/ASA/src/main/java/LogIn.fxml
@@ -1,32 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Text?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" alignment="center" hgap="10" prefHeight="400" prefWidth="600"
-          vgap="10" xmlns="http://javafx.com/javafx/10.0.2-internal"
-          fx:controller="Controllers.LogInController">
-    <padding>
-        <Insets bottom="25.0" left="25.0" right="25.0" top="25.0"/>
-    </padding>
-    <Text id="title-text" text="Antique Store Application" GridPane.columnIndex="0" GridPane.columnSpan="2"
-          GridPane.rowIndex="0"/>
 
-    <Label text="Mail Address:" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
 
-    <TextField fx:id="mailField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-
-    <Label text="Password:" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
-
-    <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-
-    <Label text="Role:" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
-
-    <ChoiceBox fx:id="roleField" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
-    </ChoiceBox>
-
-    <HBox alignment="bottom_right" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="5">
-        <Button onAction="#handleLogInAction" text="Log In"/>
-    </HBox>
-</GridPane>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="728.0" style="-fx-background-color: #2A120A;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <AnchorPane layoutX="393.0" layoutY="34.0" prefHeight="332.0" prefWidth="300.0" style="-fx-background-color: #F8E6E0;">
+         <children>
+            <PasswordField layoutX="106.0" layoutY="98.0" />
+            <TextField layoutX="106.0" layoutY="52.0" />
+            <ChoiceBox layoutX="106.0" layoutY="144.0" prefWidth="150.0" />
+            <Button layoutX="118.0" layoutY="185.0" mnemonicParsing="false" text="Log in" />
+            <Text layoutX="14.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mail Address:" wrappingWidth="105.21875" />
+            <Text layoutX="14.0" layoutY="116.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password:" wrappingWidth="85.21875" />
+            <Text layoutX="14.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Log in as:" wrappingWidth="85.21875" />
+            <Label layoutX="120.0" layoutY="14.0" text="Log in" textFill="#720707">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="84.0" layoutY="234.0" prefHeight="23.0" prefWidth="132.0" text="Donation Form" textAlignment="CENTER" textFill="#5b1f0b">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Button layoutX="89.0" layoutY="282.0" mnemonicParsing="false" text="I want to donate!" />
+         </children>
+      </AnchorPane>
+      <ImageView fitHeight="390.0" fitWidth="367.0" layoutX="14.0" layoutY="78.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../../Downloads/old-books-436498_1920.jpg" />
+         </image>
+      </ImageView>
+      <Text fill="#e4d5d5" layoutX="48.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Antique Store Application" textAlignment="CENTER" wrappingWidth="300.0">
+         <font>
+            <Font name="Apple Chancery" size="24.0" />
+         </font>
+      </Text>
+   </children>
+</AnchorPane>
