--- a/AntiqueStore/src/main/resources/WrongPassword.fxml
+++ b/AntiqueStore/src/main/resources/WrongPassword.fxml
@@ -6,10 +6,10 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: #F8E6E0;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" style="-fx-background-color: #F8E6E0;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fis.student.controllers.WrongPasswordController">
    <children>
       <Text layoutX="46.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wrong Password!" textAlignment="CENTER" wrappingWidth="157.21875" />
       <Text layoutX="74.0" layoutY="104.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please try again!" />
-      <Button layoutX="81.0" layoutY="145.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="88.0" text="Try again!" />
+      <Button fx:id="TryAgain" layoutX="81.0" layoutY="145.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="88.0" onAction="#TryAgain" text="Try again!" />
    </children>
 </AnchorPane>
