--- a/AntiqueStore/src/main/resources/PlaceOrderForm.fxml
+++ b/AntiqueStore/src/main/resources/PlaceOrderForm.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2A120A;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2A120A;" fx:controller="org.fis.student.controllers.PlaceOrderFormController" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Text fill="#ebe2e2" layoutX="172.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Place an order" textAlignment="CENTER" wrappingWidth="255.21875">
          <font>
@@ -47,11 +47,11 @@
       </Text>
       <CheckBox layoutX="10.0" layoutY="61.0" mnemonicParsing="false" text="Mr." textFill="#fffbfb" />
       <CheckBox layoutX="88.0" layoutY="61.0" mnemonicParsing="false" text="Mrs." textFill="WHITE" />
-      <TextField layoutX="102.0" layoutY="103.0" prefHeight="27.0" prefWidth="123.0" />
-      <TextField layoutX="102.0" layoutY="149.0" prefHeight="27.0" prefWidth="123.0" />
-      <TextField layoutX="102.0" layoutY="253.0" prefHeight="27.0" prefWidth="123.0" />
-      <TextField layoutX="133.0" layoutY="305.0" prefHeight="27.0" prefWidth="123.0" />
-      <Button layoutX="368.0" layoutY="319.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="130.0" style="-fx-background-color: #F8E6E0;" text="Place Order!" />
-      <ChoiceBox layoutX="99.0" layoutY="202.0" prefHeight="27.0" prefWidth="130.0" />
+      <TextField fx:id="firstName" layoutX="102.0" layoutY="103.0" prefHeight="27.0" prefWidth="123.0" />
+      <TextField fx:id="lastName" layoutX="102.0" layoutY="149.0" prefHeight="27.0" prefWidth="123.0" />
+      <TextField fx:id="city" layoutX="99.0" layoutY="202.0" prefHeight="27.0" prefWidth="123.0" />
+      <TextField fx:id="address" layoutX="102.0" layoutY="251.0" prefHeight="27.0" prefWidth="123.0" />
+      <TextField fx:id="phoneNumber" layoutX="133.0" layoutY="305.0" prefHeight="27.0" prefWidth="123.0"/>
+      <Button onAction="#PlaceOrder" layoutX="368.0" layoutY="319.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="130.0" style="-fx-background-color: #F8E6E0;" text="Place Order!" />
    </children>
 </AnchorPane>
